--- a/trunk/web/index.html
+++ b/trunk/web/index.html
@@ -199,6 +199,7 @@
 </div>
 <div id="footer">
 	<p id="copyright">地址：中国 重庆 渝北区红锦大道63号 &nbsp;&nbsp;&nbsp;邮编：401147 &nbsp;&nbsp;&nbsp;总机：023-67676666&nbsp;&nbsp;&nbsp;传真：023-67676767</p>
+	<iframe id="gongshang" align="center" frameborder=0 height=100 width=90 scrolling=no src='http://www.cqgseb.cn/ztgsgl/WebMonitor/GUILayer/eImgMana/gshdimg.aspx?sfdm=120091015171612365421'></iframe>
 </div>
 </div>
 <link type="text/css" rel="stylesheet" href="lib/jquery.ui/css/south-street/jquery-ui-1.7.2.custom.css" />
