--- a/trunk/web/cusine.html
+++ b/trunk/web/cusine.html
@@ -15,7 +15,7 @@
 		gallery.addImage('res/sunshine.jpg', $('#gallery-1'));
 		gallery.addImage('res/cusine1.png', $('#gallery-2'));
 		gallery.addImage('res/cusine2.png', $('#gallery-3'));
-		gallery.addImage('res/common_pics1.png', $('#gallery-4'));
+		gallery.addImage('res/xulanbig.jpg', $('#gallery-4'));
 
 		gallery.init(0);
 	});
@@ -147,6 +147,7 @@
 </div>
 <div id="footer">
 	<p id="copyright">地址：中国 重庆 渝北区红锦大道63号 &nbsp;&nbsp;&nbsp;邮编：401147 &nbsp;&nbsp;&nbsp;总机：023-67676666&nbsp;&nbsp;&nbsp;传真：023-67676767</p>
+	<iframe id="gongshang" align="center" frameborder=0 height=100 width=90 scrolling=no src='http://www.cqgseb.cn/ztgsgl/WebMonitor/GUILayer/eImgMana/gshdimg.aspx?sfdm=120091015171612365421'></iframe>
 </div>
 </div>
 <link type="text/css" rel="stylesheet" href="lib/jquery.ui/css/south-street/jquery-ui-1.7.2.custom.css" />
