--- a/web/conference.html
+++ b/web/conference.html
@@ -106,7 +106,7 @@
 				</div>
 				<div id="dish1-section" class="section">
 					<div class="figure">
-						<a title="音乐会所" href="res/fitnessbigfiguresrc.gif"><img src="res/fitnessbigfigure.gif" /></a>
+						<a title="音乐会所" href="res/musicsmall2big.jpg"><img src="res/musicsmall.jpg" /></a>
 						<div class="legend">音乐会所</div>
 					</div>
 					<h4>音乐会所</h4>
@@ -119,7 +119,7 @@
 				</div>
 				<div id="dish2-section" class="section" style="display: none;">
 					<div class="figure">
-						<a title="北海道足艺" href="res/fitnessbigfiguresrc.gif"><img src="res/fitnessbigfigure.gif" /></a>
+						<a title="北海道足艺" href="res/zuyismall2big.jpg"><img src="res/zuyismall.jpg" /></a>
 						<div class="legend">北海道足艺</div>
 					</div>
 					<h4>北海道足艺</h4>
@@ -134,6 +134,7 @@
 </div>
 <div id="footer">
 	<p id="copyright">地址：中国 重庆 渝北区红锦大道63号 &nbsp;&nbsp;&nbsp;邮编：401147 &nbsp;&nbsp;&nbsp;总机：023-67676666&nbsp;&nbsp;&nbsp;传真：023-67676767</p>
+	<iframe id="gongshang" align="center" frameborder=0 height=100 width=90 scrolling=no src='http://www.cqgseb.cn/ztgsgl/WebMonitor/GUILayer/eImgMana/gshdimg.aspx?sfdm=120091015171612365421'></iframe>
 </div>
 </div>
 <link type="text/css" rel="stylesheet" href="lib/jquery.ui/css/south-street/jquery-ui-1.7.2.custom.css" />
