--- a/trunk/web/index.html
+++ b/trunk/web/index.html
@@ -7,10 +7,10 @@
 <script type="text/javascript" src="script/jquery-1.3.2.min.js"></script>
 <script type="text/javascript" src="script/gallery.js"></script>
 <script type="text/javascript" src="lib/lightbox/js/jquery.lightbox-0.5.js"></script>
-<link rel="stylesheet" type="text/css" href="lib/lightbox/css/jquery.lightbox-0.5.css" media="screen" defer="true" />
+<link rel="stylesheet" type="text/css" href="lib/lightbox/css/jquery.lightbox-0.5.css" media="screen" />
 <script type="text/javascript">
-	$('body').ready(function() {
-		gallery = new Gallery($('#gallery'), $('#gallery-box'), $('#gallery .nav li'));
+	$(document).ready(function() {
+		var gallery = window.gallery = new Gallery($('#gallery'), $('#gallery-box'), $('#gallery .nav li'));
 
 		gallery.addImage('res/index1.gif', $('#gallery-1'));
 		gallery.addImage('res/index2.gif', $('#gallery-2'));
