--- a/web/cusine.html
+++ b/web/cusine.html
@@ -108,9 +108,11 @@
 				<div class="nav">
 					<ul>
 						<li class="selected"><a href="#dish1-section">阳光花园西餐厅</a></li>
-						<li><a href="#dish1-section">粤皇府</a></li>
-						<li><a href="#dish1-section">渝都府</a></li>
-						<li><a href="#dish1-section">叙兰厅</a></li>
+						<li><a href="#dish2-section">粤皇府</a></li>
+						<li><a href="#dish3-section">渝都府</a></li>
+						<li><a href="#dish4-section">叙兰厅</a></li>
+						<li><a href="#dish5-section">三月新菜</a></li>
+						<li><a href="#dish6-section">四月新菜</a></li>
 					</ul>
 				</div>
 				<div id="dish1-section" class="section">
@@ -138,6 +140,94 @@
 						<div class="figure">
 							<a title="瑶柱煲淋节瓜" href="res/dish6big.jpg"><img src="res/dish6small.jpg" width="200" /></a>
 							<div class="legend">瑶柱煲淋节瓜</div>
+						</div>
+					</div>
+				</div>
+				<div id="dish5-section" class="section" style="display:none">
+					<div class="figures" id="thumbFigures">
+						<div class="figure">
+							<a title="名菌炒爽肉" href="res/dish/3/1.png"><img src="res/dish/3/01.png" width="200" /></a>
+							<div class="legend">名菌炒爽肉</div>
+						</div>
+						<div class="figure">
+							<a title="石窝清远鸡" href="res/dish/3/2.png"><img src="res/dish/3/02.png" width="200" /></a>
+							<div class="legend">石窝清远鸡</div>
+						</div>
+						<div class="figure">
+							<a title="浓汤侵皱沙皮" href="res/dish/3/3.png"><img src="res/dish/3/03.png" width="200" /></a>
+							<div class="legend">浓汤侵皱沙皮</div>
+						</div>
+						<div class="figure">
+							<a title="靓汤鲜肚菌" href="res/dish/3/4.png"><img src="res/dish/3/04.png" width="200" /></a>
+							<div class="legend">靓汤鲜肚菌</div>
+						</div>
+						<div class="figure">
+							<a title="家乡煎让豇豆" href="res/dish/3/5.png"><img src="res/dish/3/05.png" width="200" /></a>
+							<div class="legend">家乡煎让豇豆</div>
+						</div>
+						<div class="figure">
+							<a title="春色满园" href="res/dish/3/6.png"><img src="res/dish/3/06.png" width="200" /></a>
+							<div class="legend">春色满园</div>
+						</div>
+						<div class="figure">
+							<a title="紫米卷" href="res/dish/3/7.png"><img src="res/dish/3/07.png" width="200" /></a>
+							<div class="legend">紫米卷</div>
+						</div>
+						<div class="figure">
+							<a title="益寿龟憋炖鲍鱼汤" href="res/dish/3/8.png"><img src="res/dish/3/08.png" width="200" /></a>
+							<div class="legend">益寿龟憋炖鲍鱼汤</div>
+						</div>
+						<div class="figure">
+							<a title="铁板蛋煎虾" href="res/dish/3/9.png"><img src="res/dish/3/09.png" width="200" /></a>
+							<div class="legend">铁板蛋煎虾</div>
+						</div>
+					</div>
+				</div>
+				<div id="dish6-section" class="section" style="display:none">
+					<div class="figures" id="thumbFigures">
+						<div class="figure">
+							<a title="水煮大莲鲍片" href="res/dish/4/1.png"><img src="res/dish/4/01.png" width="200" /></a>
+							<div class="legend">水煮大莲鲍片</div>
+						</div>
+						<div class="figure">
+							<a title="石板煎焗马鲛鱼" href="res/dish/4/2.png"><img src="res/dish/4/02.png" width="200" /></a>
+							<div class="legend">石板煎焗马鲛鱼</div>
+						</div>
+						<div class="figure">
+							<a title="苕皮牛肉" href="res/dish/4/3.png"><img src="res/dish/4/03.png" width="200" /></a>
+							<div class="legend">苕皮牛肉</div>
+						</div>
+						<div class="figure">
+							<a title="卤海带结" href="res/dish/4/4.png"><img src="res/dish/4/04.png" width="200" /></a>
+							<div class="legend">卤海带结</div>
+						</div>
+						<div class="figure">
+							<a title="芥菜肉丸" href="res/dish/4/5.png"><img src="res/dish/4/05.png" width="200" /></a>
+							<div class="legend">芥菜肉丸</div>
+						</div>
+						<div class="figure">
+							<a title="河北三鲜" href="res/dish/4/6.png"><img src="res/dish/4/06.png" width="200" /></a>
+							<div class="legend">河北三鲜</div>
+						</div>
+						<div class="figure">
+							<a title="干烧大明虾" href="res/dish/4/7.png"><img src="res/dish/4/07.png" width="200" /></a>
+							<div class="legend">干烧大明虾</div>
+						</div>
+						<div class="figure">
+							<a title="蟹粉菜堆" href="res/dish/4/8.png"><img src="res/dish/4/08.png" width="200" /></a>
+							<div class="legend">蟹粉菜堆</div>
+						</div>
+						<div class="figure">
+							<a title="香擂河虾" href="res/dish/4/9.png"><img src="res/dish/4/09.png" width="200" /></a>
+							<div class="legend">香擂河虾</div>
+						</div>
+						<div class="figure">
+							<a title="蚬肉胜瓜煮荔芋" href="res/dish/4/10.png"><img src="res/dish/4/010.png" width="200" /></a>
+							<div class="legend">蚬肉胜瓜煮荔芋</div>
+						</div>
+						<div class="figure">
+							<a title="酥皮西施卷" href="res/dish/4/11.png"><img src="res/dish/4/011.png" width="200" /></a>
+							<div class="legend">酥皮西施卷</div>
 						</div>
 					</div>
 				</div>
